# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  very_important_code.py
brain_games/: __init__.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  brain_progressions.py
brain_games/scripts/: brain_even.py  brain_games.py  cli.py  game_engine.py  game_rules.py  game_utils.py
